css/main.css
@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@5.2/distr/fira_code.css);
/* Specify in CSS */
code { font-family: 'Fira Code', monospace; }

@supports (font-variation-settings: normal) {
  code { font-family: 'Fira Code VF', monospace; }
}

:root {
    --main-color: #F2F2F2;
    --main-bg: #333333;
    --main-bold-color: #73C48F;
    --cursor-color: #49B9C7;
    --cursor-color-bg: #f6f6f6;
}

body {
    background-color: #333333;
    color: #F2F2F2;
    font-family: 'Fira Code';
}

p {
    margin-top: 5px;
    margin-bottom: 5px;
}

.commands {
    display: flex;
    flex-direction: column;
}

.hidden {
    opacity: 0;
    z-index: -1;
    cursor: unset;
    position: absolute;
}

.input {
    display: inline-flex;
}

.bold {
    font-weight: bold;
}

.cursor {
    color: var(--cursor-color);
}

.user {
    color: var(--main-bold-color);
}

.blink {
    color: var(--main-color);
    -webkit-animation: 1s blink step-end infinite;
    -moz-animation: 1s blink step-end infinite;
    -ms-animation: 1s blink step-end infinite;
    -o-animation: 1s blink step-end infinite;
    animation: 1s blink step-end infinite;
  }

  @keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: var(--main-color);
    }
  }
  
  @-moz-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: var(--main-color);
    }
  }
  
  @-webkit-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: var(--main-color);
    }
  }
  
  @-ms-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: var(--main-color);
    }
  }
  
  @-o-keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: var(--main-color);
    }
  }

